# sisinfo2Grupal

backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/src/: main.py
backend/src/core/: api.py  config.py  database.py  enum.py  files_database.py  mapping_database.py
backend/src/modules/assignment/: controllers.py  model.py  routes.py  schemas.py  services.py
backend/src/modules/assignments/: model.py
backend/src/modules/comments/: controllers.py  model.py  routes.py  schemas.py  services.py
backend/src/modules/database/: student.py
backend/src/modules/profesion/: controllers.py  model.py  routes.py  schemas.py  services.py
backend/src/modules/profession/: controllers.py  model.py  routes.py  schemas.py  services.py
backend/src/modules/student/: controllers.py  model.py  routes.py  schemas.py  services.py
backend/src/modules/subject/: controllers.py  model.py  routes.py  schemas.py  services.py
backend/src/modules/submission/: controllers.py  model.py  routes.py  schemas.py  services.py
backend/src/modules/teacher/: controllers.py  model.py  routes.py  schemas.py  services.py
frontend/: index.html
frontend/pages/: assignment-detail.html  class.html  create-assigment.html  create-assignment.html  dashboard.html  student-dashboard.html  teacher-dashboard.html
frontend/scripts/: assignment-detail.js  assignmentState.js  class.js  commentsList.js  create-assignment.js  createAssignment.js  dashboard.js  formValidator.js  joinClass.js  modal.js  notifications.js  script.js  selectRol.js  shareCode.js  submitAssignment.js  toast.js  (+1 more)
(+24 files in other folders)
